--- a/configs/VG150/SGG_FasterRCNN.yaml
+++ b/configs/VG150/SGG_FasterRCNN.yaml
@@ -1,20 +1,22 @@
+DTYPE: "float16"
+GLOVE_DIR: ./datasets/VG/glove
 INPUT:
-  MIN_SIZE_TRAIN: (600,)
+  MIN_SIZE_TRAIN: 600
   MAX_SIZE_TRAIN: 1000
   MIN_SIZE_TEST: 600
   MAX_SIZE_TEST: 1000
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
   WEIGHT: "catalog://ImageNetPretrained/FAIR/20171220/X-101-32x8d"
+  PRETRAINED_DETECTOR_CKPT: ./checkpoints/FasterRCNN_Motifs.pth
   BACKBONE:
-    CONV_BODY: "R-101-FPN" # VGG-16
+    TYPE: "R-101-FPN" # VGG-16
   RESNETS:
     BACKBONE_OUT_CHANNELS: 256
     STRIDE_IN_1X1: False
     NUM_GROUPS: 32
     WIDTH_PER_GROUP: 8
   RELATION_ON: True
-  ATTRIBUTE_ON: False
   FLIP_AUG: False            # if there is any left-right relation, FLIP AUG should be false
   RPN:
     USE_FPN: True
@@ -30,11 +32,10 @@ MODEL:
     FPN_POST_NMS_PER_BATCH: False
     RPN_MID_CHANNEL: 256
   ROI_HEADS:
-    USE_FPN: True
     POSITIVE_FRACTION: 0.5
     BG_IOU_THRESHOLD: 0.3
     BATCH_SIZE_PER_IMAGE: 256
-    DETECTIONS_PER_IMG: 80
+    DETECTIONS_PER_IMG: 40
     NMS_FILTER_DUPLICATES: True
   ROI_BOX_HEAD:
     POOLER_RESOLUTION: 7
@@ -42,21 +43,11 @@ MODEL:
     POOLER_SAMPLING_RATIO: 2
     FEATURE_EXTRACTOR: "FPN2MLPFeatureExtractor"
     PREDICTOR: "FPNPredictor"
-    NUM_CLASSES: 131                # 151 for VG, 1201 for GQA
+    NUM_CLASSES: 151                # 151 for VG, 1201 for GQA
     MLP_HEAD_DIM: 4096
-  ROI_ATTRIBUTE_HEAD:
-    FEATURE_EXTRACTOR: "FPN2MLPFeatureExtractor"
-    PREDICTOR: "FPNPredictor"
-    USE_BINARY_LOSS: True           # choose binary, because cross_entropy loss deteriorate the box head, even with 0.1 weight
-    POS_WEIGHT: 50.0
-    ATTRIBUTE_LOSS_WEIGHT: 1.0
-    # NUM_ATTRIBUTES: 201             # 201 for VG, 501 for GQA
-    # MAX_ATTRIBUTES: 10             
-    ATTRIBUTE_BGFG_SAMPLE: True    
-    ATTRIBUTE_BGFG_RATIO: 3        
   ROI_RELATION_HEAD:
-    USE_GT_BOX: True
-    USE_GT_OBJECT_LABEL: True
+    USE_GT_BOX: False
+    USE_GT_OBJECT_LABEL: False
     REQUIRE_BOX_OVERLAP: False              # for sgdet, during training, only train pairs with overlap
     ADD_GTBOX_TO_PROPOSAL_IN_TRAIN: True    # for sgdet only, in case some gt boxes are missing
     NUM_CLASSES: 51                 # 51 for VG, 201 for GQA (not contain "to the left of" & "to the right of")
@@ -78,8 +69,8 @@ MODEL:
     ############# Parameters for Causal Unbias Predictor ##############
     ### Implementation for paper "Unbiased Scene Graph Generation from Biased Training"
     CAUSAL:
-      EFFECT_TYPE: 'none'             # candicates: 'TDE', 'NIE', 'TE', 'none'
-      FUSION_TYPE: 'sum'              # candicates: 'sum', 'gate'         
+      EFFECT_TYPE: 'TDE'             # candicates: 'TDE', 'NIE', 'TE', 'none'
+      FUSION_TYPE: 'sum'              # candicates: 'sum', 'gate'
       SEPARATE_SPATIAL: False         # separate spatial in union feature
       CONTEXT_LAYER: "motifs"         # candicates: motifs, vctree, vtranse
       SPATIAL_FOR_VISION: True
@@ -92,22 +83,29 @@ MODEL:
       NUM_HEAD: 8
       KEY_DIM: 64
       VAL_DIM: 64
-      INNER_DIM: 2048 
+      INNER_DIM: 2048
 DATASETS:
-  TRAIN: ("VG_indoor_filtered_train",)
-  VAL: ("VG_indoor_filtered_val",)
-  TEST: ("VG_indoor_filtered_test",)
+  TRAIN: ("VG150_train",)
+  VAL: ("VG150_val",)
+  TEST: ("VG150_test",)
+DATALOADER:
+  SIZE_DIVISIBILITY: 32
+DATASETS:
+  TRAIN: ("VG150_train",)
+  VAL: ("VG150_val",)
+  TEST: ("VG150_test",)
 DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
+  IMS_PER_BATCH: 4
   BIAS_LR_FACTOR: 1
-  BASE_LR: 0.02
+  BASE_LR: 0.01
   WARMUP_FACTOR: 0.1
   WEIGHT_DECAY: 0.0001
   MOMENTUM: 0.9
   GRAD_NORM_CLIP: 5.0
-  STEPS: (10000, 16000)
-  MAX_ITER: 40000
+  STEPS: (45000, 60000)
+  MAX_ITER: 900000
   VAL_PERIOD: 2000
   CHECKPOINT_PERIOD: 2000
   PRINT_GRAD_FREQ: 4000
@@ -119,12 +117,12 @@ SOLVER:
     COOLDOWN: 0
     FACTOR: 0.1
     MAX_DECAY_STEP: 3
-OUTPUT_DIR: './output/relation_baseline'
+OUTPUT_DIR: './output/relation/Causal_Motifs_TDE'
 TEST:
+  IMS_PER_BATCH: 1
   ALLOW_LOAD_FROM_CACHE: False
   RELATION:
     SYNC_GATHER: True      # turn on will slow down the evaluation to solve the sgdet test out of memory problem
     REQUIRE_OVERLAP: False
     LATER_NMS_PREDICTION_THRES: 0.5
-  CUSTUM_EVAL: False       # eval SGDet model on custum images, output a json
-  CUSTUM_PATH: '.'         # the folder that contains the custum images, only jpg files are allowed  
+
